Support report of playback progress to JS land

--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
         }
       }
 
+      function updateProgress(current, total) {
+        console.log('t', current, total);
+      }
+
       function convertMidi(name) {
         midiName = name;
         convert();
